--- a/overview.html
+++ b/overview.html
@@ -48,6 +48,7 @@
                         <li class="has-dropdown"><a href="#">24er Mosaike</a>
                             <ul class="dropdown">
                                 <li><a href="#42">Antiquarium München</a></li>
+                                <li><a href="#52">Blue Sun Garching</a></li>
                                 <li><a href="#16">Districts of Munich</a></li>
                                 <li><a href="#23">Das große Biergartenmosaik</a></li>
                                 <li><a href="#46">Endless I</a></li>
@@ -158,6 +159,7 @@
     addMissions(celtic_startMissions.features[0], celtic_mission, 'a');
     // mosaics with 24 missions
     addMissions(antiquar_startMissions.features[0], antiquar_mission, 'a');
+    addMissions(blueSun_startMissions.features[0], blueSun_mission, 'a');
     addMissions(districts_startMissions.features[0], districts_mission, 'a');
     addMissions(biergarten_startMissions.features[0], biergarten_mission, 'a');
     addMissions(endlessI_startMissions.features[0], endlessI_mission, 'a');
