--- a/overview.html
+++ b/overview.html
@@ -56,6 +56,7 @@
                                 <li><a href="#4">Marienplatz</a></li>
                                 <li><a href="#2">Münchner Kindl</a></li>
                                 <li><a href="#12">Munich City</a></li>
+                                <li><a href="#53">Munich City Walls</a></li>
                                 <li><a href="#10">Munich Portal Hunter Stroll</a></li>
                                 <li><a href="#43">Schleissheim Postcard</a></li>
                                 <li><a href="#49">1972 Summer Olympics</a></li>
@@ -166,6 +167,7 @@
     addMissions(marienplatz_startMissions.features[0], marienplatz_mission, 'a');
     addMissions(kindl_startMissions.features[0], kindl_mission, 'a');
     addMissions(city_startMissions.features[0], city_mission, 'a');
+    addMissions(walls_startMissions.features[0], walls_mission, 'a');
     addMissions(stroll_startMissions.features[0], stroll_mission, 'a');
     addMissions(postcard_startMissions.features[0], postcard_mission, 'a');
     addMissions(olympics_startMissions.features[0], olympics_mission, 'a');
