--- a/overview.html
+++ b/overview.html
@@ -79,6 +79,7 @@
                                 <li><a href="#48">Endless III</a></li>
                                 <li><a href="#19">Spaziergang durch Erding</a></li>
                                 <li><a href="#11">Spiderweb</a></li>
+                                <li><a href="#54">Starnberg</a></li>
                                 <li><a href="#13">Sunset at the Lake</a></li>
                             </ul>
                         </li>
@@ -184,6 +185,7 @@
     addMissions(endlessIII_startMissions.features[0], endlessIII_mission, 'a');
     addMissions(erding_startMissions.features[0], erding_mission, 'a');
     addMissions(spiderweb_startMissions.features[0], spiderweb_mission, 'a');
+    addMissions(starnberg_startMissions.features[0], starnberg_mission, 'a');
     addMissions(sunset_startMissions.features[0], sunset_mission, 'a');
     // mosaics with 6 missions
     addMissions(aurum_startMissions.features[0], aurum_mission, 'a');
