--- a/overview.html
+++ b/overview.html
@@ -156,6 +156,8 @@
     // mosaics with 60 missions
     addMissions(olyturm_startMissions.features[0], olyturm_mission, 'a');
     addMissions(uptown_startMissions.features[0], uptown_mission, 'a');
+    // mosaics with 48 missions
+    addMissions(reiter_startMissions.features[0], reiter_mission, 'a');
     // mosaics with 36 missions
     addMissions(celtic_startMissions.features[0], celtic_mission, 'a');
     // mosaics with 24 missions
