--- a/overview.html
+++ b/overview.html
@@ -40,6 +40,16 @@
                                 <li><a href="#51">Uptown München</a></li>
                             </ul>
                         </li>
+                        <li class="has-dropdown"><a href="#">54er Mosaik</a>
+                            <ul class="dropdown">
+                                <li><a href="#56">Sound & Vision</a></li>
+                            </ul>
+                        </li>
+                        <li class="has-dropdown"><a href="#">48er Mosaik</a>
+                            <ul class="dropdown">
+                                <li><a href="#55">Blauer Reiter</a></li>
+                            </ul>
+                        </li>
                         <li class="has-dropdown"><a href="#">36er Mosaik</a>
                             <ul class="dropdown">
                                 <li><a href="#38">Celtic Knot</a></li>
@@ -61,6 +71,7 @@
                                 <li><a href="#43">Schleissheim Postcard</a></li>
                                 <li><a href="#49">1972 Summer Olympics</a></li>
                                 <li><a href="#30">Stadtwappen Dachau</a></li>
+                                <li><a href="#57">Tatort Hadern</a></li>
                                 <li><a href="#32">X-MAS Mosaik</a></li>
                             </ul>
                         </li>
@@ -156,6 +167,8 @@
     // mosaics with 60 missions
     addMissions(olyturm_startMissions.features[0], olyturm_mission, 'a');
     addMissions(uptown_startMissions.features[0], uptown_mission, 'a');
+    // mosaic with 54 missions
+    addMissions(sound_startMissions.features[0], sound_mission, 'a');
     // mosaics with 48 missions
     addMissions(reiter_startMissions.features[0], reiter_mission, 'a');
     // mosaics with 36 missions
@@ -175,6 +188,7 @@
     addMissions(postcard_startMissions.features[0], postcard_mission, 'a');
     addMissions(olympics_startMissions.features[0], olympics_mission, 'a');
     addMissions(dachau_startMissions.features[0], dachau_mission, 'a');
+    addMissions(tatort_startMissions.features[0], tatort_mission, 'a');
     addMissions(xmas_startMissions.features[0], xmas_mission, 'a');
     // mosaics with 18 missions
     addMissions(endlessII_startMissions.features[0], endlessII_mission, 'a');
