Add basic sidebar

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
     </nav>
 </div>
 <div id="map"></div>
+<div id="sidebar">
+    <h2>Sidebar Title</h2>
+</div>
 <script>
     var totalPortals = 0;
     var uniquePortals = 0;
